--- a/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
+++ b/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.AndFlmsg"
     xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
-    android:versionName="1.2.1" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.3.1" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
@@ -18,11 +18,11 @@
         tools:replace="android:icon,android:name,android:label"
         android:name="AndFlmsgDebug"
         android:icon="@drawable/icon"
-        android:label="@string/app_name">
+        android:label="@string/txt_app_name">
         <activity
             android:name=".AndFlmsg"
             android:configChanges="keyboardHidden|orientation|screenLayout|screenSize"
-            android:label="@string/app_name"
+            android:label="@string/txt_app_name"
 	        android:theme="@style/Theme.AppCompat" 
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
