--- a/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
+++ b/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
@@ -2,18 +2,18 @@
 <manifest package="com.AndFlmsg"
     xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
-    android:versionName="1.3.1" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.3.4" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"></uses-permission>
+    <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
+    <uses-permission android:name="android.permission.BROADCAST_STICKY"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.READ_LOGS"/>
-    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         tools:replace="android:icon,android:name,android:label"
         android:name="AndFlmsgDebug"
@@ -23,30 +23,30 @@
             android:name=".AndFlmsg"
             android:configChanges="keyboardHidden|orientation|screenLayout|screenSize"
             android:label="@string/txt_app_name"
-	        android:theme="@style/Theme.AppCompat" 
+            android:theme="@style/Theme.AppCompat"
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-	    </activity>
+        </activity>
 
         <activity
             android:name="myPreferences"  >
         </activity>
 
-        <service 
+        <service
             android:name=".Processor" >
         </service>
 
-        <activity 
+        <activity
             android:name="ar.com.daidalos.afiledialog.FileChooserActivity" >
         </activity>
 
         <activity
-            android:name=".imagePicker" > 
+            android:name=".imagePicker" >
         </activity>
-        
-	</application>
+
+    </application>
 
 </manifest>
