--- a/aFileDialogoriginal/build.gradle
+++ b/aFileDialogoriginal/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 22
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 27
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 8
