--- a/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
+++ b/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.AndFlmsg"
     xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
-    android:versionName="1.3.6" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.3.7" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
@@ -47,6 +47,16 @@
         <activity
             android:name=".imagePicker" >
         </activity>
+
+        <provider
+            android:name=".myFileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
 
     </application>
 
