--- a/andFlmsg_Head_CPP120/build.gradle
+++ b/andFlmsg_Head_CPP120/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.AndFlmsg"
@@ -39,8 +38,8 @@ android {
 }
 
 dependencies {
-    compile project(':aFileDialogoriginal')
-    compile 'com.android.support:support-v4:27.1.0'
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile files('libs/acra-4.5.0.jar')
+    implementation project(':aFileDialogoriginal')
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation files('libs/acra-4.5.0.jar')
 }
