--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
         //google()
         maven { url 'https://maven.google.com' }
         jcenter()
+        google()
     }
     dependencies {
         //classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.4.2'
     }
 }
 
