--- a/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
+++ b/andFlmsg_Head_CPP120/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.AndFlmsg"
     xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
-    android:versionName="1.4.3" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.6.0.1" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
@@ -23,11 +23,19 @@
             android:configChanges="keyboardHidden|orientation|screenLayout|screenSize"
             android:label="@string/txt_app_name"
             android:theme="@style/Theme.AppCompat"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:launchMode="singleTop" >
+            <!--  android:launchMode="singleInstance" --> >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
         </activity>
 
         <activity
