--- a/andFlmsg_Head_CPP120/build.gradle
+++ b/andFlmsg_Head_CPP120/build.gradle
@@ -1,11 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.AndFlmsg"
-        minSdkVersion 14
+        minSdkVersion 17
         targetSdkVersion 27
         externalNativeBuild {
             ndkBuild {
@@ -42,4 +48,5 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation files('libs/acra-4.5.0.jar')
+    implementation 'com.github.mik3y:usb-serial-for-android:3.4.4'
 }
