--- a/andFlmsg_Head_CPP120/build.gradle
+++ b/andFlmsg_Head_CPP120/build.gradle
@@ -15,7 +15,7 @@ android {
         targetSdkVersion 27
         externalNativeBuild {
             ndkBuild {
-                abiFilters 'armeabi-v7a', 'x86'
+                abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
                 cFlags "-DHAVE_STRCASESTR"
             }
         }
